<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/sign"
        android:orderInCategory="100"
        android:title="@string/sign_in"
        app:showAsAction="never" />
    <item
        android:id="@+id/add_menu"
        android:orderInCategory="100"
        android:title="@string/add_menu"
        app:showAsAction="never" />

    <item
        android:id="@+id/remove_menu"
        android:orderInCategory="100"
        android:title="@string/remove_menu"
        app:showAsAction="never" />
    <item
        android:id="@+id/upgrade_menu"
        android:orderInCategory="100"
        android:title="@string/upgrade_menu"
        app:showAsAction="never" />
</menu>
