<ScrollView xmlns:tools="http://schemas.android.com/tools"
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:fancy="http://schemas.android.com/apk/res-auto"
android:layout_width="match_parent"
android:layout_height="wrap_content"
tools:context="com.blogspot.larn4android.materialtabs.About">

<LinearLayout
    android:id="@+id/section1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/section_facebook"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#3b5998"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp" >

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_facebook_like"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="#3b5998"
            fancy:fb_focusColor="#5577bd"
            fancy:fb_fontIconResource="@string/icon_like"
            fancy:fb_fontIconSize="15sp"
            fancy:fb_iconPosition="right"
            fancy:fb_radius="30dp"
            fancy:fb_text="Like my facebook page"
            fancy:fb_textColor="#FFFFFF"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_facebook_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="#3b5998"
            fancy:fb_focusColor="#5577bd"
            fancy:fb_fontIconResource="@string/icon_share"
            fancy:fb_fontIconSize="25sp"
            fancy:fb_iconPosition="right"
            fancy:fb_iconPaddingLeft="20dp"
            fancy:fb_iconPaddingRight= "0dp"
            fancy:fb_radius="30dp"
            fancy:fb_text="Share the link"
            fancy:fb_textColor="#FFFFFF"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_facebook_follow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="#3b5998"
            fancy:fb_focusColor="#5577bd"
            fancy:fb_fontIconResource="@string/icon_follow"
            fancy:fb_fontIconSize="25sp"
            fancy:fb_iconPosition="right"
            fancy:fb_radius="30dp"
            fancy:fb_text="Follow Mehdi Sakout"
            fancy:fb_textColor="#FFFFFF" />
    </LinearLayout>


    <LinearLayout
        android:id="@+id/section_socialnetworks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center_horizontal"
        android:minHeight="200dp"
        android:orientation="vertical"
        android:padding="20dp" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:gravity="center" >

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_android"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                fancy:fb_defaultColor="#55acee"
                fancy:fb_focusColor="#313131"
                fancy:fb_iconResource="@drawable/twitter"
                fancy:fb_iconPaddingLeft="0dp"
                fancy:fb_iconPaddingRight="0dp"
                fancy:fb_radius="64dp"
                fancy:fb_textColor="#FFFFFF" />

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_dropbox"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                fancy:fb_defaultColor="#007ee5"
                fancy:fb_iconPaddingLeft="0dp"
                fancy:fb_iconPaddingRight="0dp"
                fancy:fb_focusColor="#313131"
                fancy:fb_iconResource="@drawable/dropbox"
                fancy:fb_radius="64dp">
            </mehdi.sakout.fancybuttons.FancyButton>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/sn_pos2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_instagram"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                fancy:fb_defaultColor="#3f729b"
                fancy:fb_iconPaddingLeft="0dp"
                fancy:fb_iconPaddingRight="0dp"
                fancy:fb_focusColor="#313131"
                fancy:fb_iconResource="@drawable/facebook"
                fancy:fb_radius="64dp">
            </mehdi.sakout.fancybuttons.FancyButton>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_sound"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                fancy:fb_defaultColor="#ff8800"
                fancy:fb_iconPaddingLeft="0dp"
                fancy:fb_iconPaddingRight="0dp"
                fancy:fb_focusColor="#313131"
                fancy:fb_iconResource="@drawable/soundcloud"
                fancy:fb_radius="64dp">
            </mehdi.sakout.fancybuttons.FancyButton>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal" >

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_gplus"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                fancy:fb_defaultColor="#dd4b39"
                fancy:fb_iconPaddingLeft="0dp"
                fancy:fb_iconPaddingRight="0dp"
                fancy:fb_focusColor="#313131"
                fancy:fb_iconResource="@drawable/gplus"
                fancy:fb_radius="64dp">
            </mehdi.sakout.fancybuttons.FancyButton>

            <mehdi.sakout.fancybuttons.FancyButton
                android:id="@+id/btn_facebook"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginRight="10dp"
                android:padding="10dp"
                fancy:fb_defaultColor="#000000"
                fancy:fb_iconPaddingLeft="0dp"
                fancy:fb_iconPaddingRight="0dp"
                fancy:fb_focusColor="#313131"
                fancy:fb_iconResource="@drawable/github"
                fancy:fb_radius="64dp" >
            </mehdi.sakout.fancybuttons.FancyButton>
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/section_twitter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#55acee"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="20dp" >

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_twitter_follow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:padding="5dp"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="2dp"
            fancy:fb_defaultColor="#55acee"
            fancy:fb_focusColor="#8cc9f8"
            fancy:fb_iconResource="@drawable/twitter"
            fancy:fb_text="Follow me on Twitter"
            fancy:fb_textColor="#FFFFFF"/>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/btn_twitter_followers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:padding="10dp"
            fancy:fb_borderColor="#FFFFFF"
            fancy:fb_borderWidth="2dp"
            fancy:fb_defaultColor="#55acee"
            fancy:fb_focusColor="#8cc9f8"
            fancy:fb_fontIconResource="@string/icon_user"
            fancy:fb_fontIconSize="25sp"
            fancy:fb_iconPosition="top"
            fancy:fb_text="2145 followers"
            fancy:fb_textColor="#FFFFFF"/>
    </LinearLayout>

</LinearLayout>

</ScrollView>